--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,28 @@
-aiodns==3.4.0
+aiodns==3.5.0
 aiohappyeyeballs==2.6.1
-aiohttp==3.12.4
-aiosignal==1.3.2
+aiohttp==3.12.15
+aiosignal==1.4.0
 async-timeout==5.0.1
 attrs==25.3.0
-audioop-lts==0.2.1
-ccxt==4.4.86
-certifi==2025.4.26
+audioop-lts==0.2.2
+ccxt==4.4.99
+certifi==2025.8.3
 cffi==1.17.1
-charset-normalizer==3.4.2
-cryptography==45.0.3
+charset-normalizer==3.4.3
+cryptography==45.0.6
 discord==2.3.2
 discord.py==2.5.2
-frozenlist==1.6.0
+frozenlist==1.7.0
 idna==3.10
-multidict==6.4.4
-propcache==0.3.1
-pycares==4.8.0
+multidict==6.6.3
+propcache==0.3.2
+pycares==4.10.0
 pycparser==2.22
 python-decouple==3.8
-requests==2.32.3
+PyYAML==6.0.2
+requests==2.32.4
 setuptools==80.9.0
-typing_extensions==4.13.2
-urllib3==2.4.0
-yarl==1.20.0
+typing_extensions==4.14.1
+urllib3==2.5.0
+wcwidth==0.2.13
+yarl==1.20.1
